# interfacile

./: .gitignore  .interfacile.json  CONTRIBUTING.md  LICENSE  README-KIT.md  README.md  pyproject.toml  ticket-dashboard.html
.agents/skills/: abandon.skill  approve.skill  batch.skill  ceremony.skill  close.skill  commit-all.skill  commit.skill  fix-now.skill  fix.skill  fund.skill  health.skill  list.skill  new-ticket.skill  reopen.skill  rollback.skill  scope.skill
.interfacile/: config.json
docs/tickets/: EM-1146-ticket-closure-ceremony.md  EM-1147-epic-closure-ceremony.md  EM-1148-ticket-creation-standard.md  EM-1149-stale-ticket-scanner.md  ticket-dashboard.md
examples/: README.md  engineering-reference.md
examples/.interfacile/: config.json
examples/configs/: README.md  clean-paste.interfacile.json  custom-theme.interfacile.json  starter.interfacile.json  theyre-here.interfacile.json
interfacile/: __init__.py  cli.py  events.py  procs.py  scaffold.py  server.py  ticket.py
interfacile/templates/: quotes.txt
scripts/dev/: ticket_report_server.py
scripts/git-hooks/: commit-msg  pre-commit  prepare-commit-msg
scripts/ticket_hygiene/: _source_scanner.py  audit_tickets.py  classifier.py  classifier_rules.yaml  generate_index.py  link_validator.py  show_health.py  show_impact.py  show_path.py  ticket.py  update_agents_epic_table.py
tests/: test_deps.py  test_events.py  test_hub.py  test_new_ticket.py  test_procs.py  test_quotes.py  test_review.py  test_scaffold.py  test_ticket_flow.py
tests/tooling/: test_ticket_hygiene.py  (+1 more)
tickets/: README.md
(+174 files in other folders)
